src/objects/Box_Contact__c.object
<CustomObject>
    <description>Intermediate object between Box object and Contact Object</description>
    <fields>
        <fullName>Archive_Box_Name__c</fullName>
        <description>Link to Archive Box object (master object for this object)</description>
        <label>Archive Box Name</label>
        <referenceTo>ArchiveBox__c</referenceTo>
        <relationshipLabel>Exit Folders</relationshipLabel>
        <relationshipName>Box_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Box_Alias__c</fullName>
        <description>Get the Archive Box Alias from the Archive Box Object</description>
        <formula>Archive_Box_Name__r.Box_Alias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Bar_Code__c</fullName>
        <formula>Archive_Box_Name__r.Box_Bar_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Bar Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Borough__c</fullName>
        <description>Show borough (intake borough) for which client folders should go in box</description>
        <formula>Text(Archive_Box_Name__r.Folder_Borough__c)</formula>
        <label>Box Borough</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Complete__c</fullName>
        <formula>Text(Archive_Box_Name__r.Box_Complete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Destroy_Date__c</fullName>
        <formula>Archive_Box_Name__r.Box_Destroy_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Destroy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Check__c</fullName>
        <description>Check to make sure that folder belongs in box. E.g.; folder is removed from box because client re-joins CEP and the box hasn&apos;t been shipped so the folder is pulled out.</description>
        <formula>if( and(CEP_Client__r.Current_Exit_Date__c &gt;=Archive_Box_Name__r.Box_Start_Date__c, CEP_Client__r.Current_Exit_Date__c &lt;=Archive_Box_Name__r.Box_End_Date__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box/Folder Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Shipped__c</fullName>
        <description>Date box shipped from archive box object</description>
        <formula>Archive_Box_Name__r.Date_Box_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEP_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to contact</description>
        <label>CEP Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exit Folders</relationshipLabel>
        <relationshipName>Boxes_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator__c</fullName>
        <description>Get the Case Coordinator from the CEP Client&apos;s contact record.</description>
        <formula>CEP_Client__r.Case_Coordinator__r.FirstName &amp;&quot; &quot;&amp; CEP_Client__r.Case_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Exit__c</fullName>
        <description>Current Exit date for the CEP Client whose folder this is</description>
        <formula>CEP_Client__r.Current_Exit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Exit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Text__c</fullName>
        <description>Convert Current CEP Exit Date to yyyy-mm text field for validation with box alias</description>
        <formula>text(year(CEP_Client__r.Current_Exit_Date__c ))&amp;&quot;-&quot;&amp; LPAD(text(month(CEP_Client__r.Current_Exit_Date__c )),2,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Notes__c</fullName>
        <label>Folder Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folder_Status__c</fullName>
        <inlineHelpText>If a folder is missing and cannot be found, mark it as &quot;Lost&quot;.  This means the folder is &quot;Accounted For&quot; as far as this application is concerned.</inlineHelpText>
        <label>Folder Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Turned In</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Returned to Team Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Included in Box</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dBoxEnd__c</fullName>
        <description>End date on archive box for filtered lookup comparison</description>
        <formula>Archive_Box_Name__r.Box_End_Date__c</formula>
        <label>dBoxEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dBoxStart__c</fullName>
        <description>Archive box start date for filtering comparison</description>
        <formula>Archive_Box_Name__r.Box_Start_Date__c</formula>
        <label>dBoxStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>shipped__c</fullName>
        <description>Reporting: Did the Archive box for this folder get shipped out.</description>
        <formula>if(!isblank(Box_Shipped__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>shipped</label>
        <type>Text</type>
    </fields>
    <label>Box/Contact</label>
    <nameField>
        <displayFormat>BC-{0}</displayFormat>
        <label>BC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boxes/Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Exit_Date_Match_Box_Alias</fullName>
        <active>true</active>
        <description>Make sure all folders in a box are for clients with a current exit date that matches the year/month of the archive box</description>
        <errorConditionFormula>or(isblank(Current_Exit__c),Current_Exit__c&lt;Archive_Box_Name__r.Box_Start_Date__c, Current_Exit__c&gt;Archive_Box_Name__r.Box_End_Date__c)</errorConditionFormula>
        <errorDisplayField>Archive_Box_Name__c</errorDisplayField>
        <errorMessage>Client&apos;s folder does not belong in the selected box based on the client&apos;s current exit date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reporting_Borough_match_Folder_Borough</fullName>
        <active>true</active>
        <description>Client&apos;s Reporting Borough must match the Folder borough</description>
        <errorConditionFormula>TEXT(Archive_Box_Name__r.Folder_Borough__c)  &lt;&gt;  TEXT(CEP_Client__r.Reporting_Borough__c)</errorConditionFormula>
        <errorMessage>Client&apos;s Reporting Borough must match the Folder Borough</errorMessage>
    </validationRules>
</CustomObject>